added sqlite usage and added categories table, controller and model
